<resources>
    <string name="app_name">SpellBook</string>
    <string name="meta_spell_name">Meta Magic</string>
    <string name="spell_book_name">Spell Book</string>
    <string name="prepared_spell_name">Prepared Spell</string>
    <string name="statistics_name">Character</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name">Name</string>
    <string name="level">Level</string>
    <string name="description">Description</string>
    <string name="create_metamagic">Create Meta Magic</string>
    <string name="descriptors">Descriptors</string>
    <string name="create_spell">Create Spell</string>
    <string name="school">School</string>
    <string name="range">Range</string>
    <string name="area">Area</string>
    <string name="dice">Dice</string>
    <string name="duration">Duration</string>
    <string name="casting_time">Casting Time</string>
    <string name="ice">Ice</string>
    <string name="used">Used</string>
    <string name="avalable">Avalable</string>
    <string name="spell">Spell</string>
    <string name="value">Value</string>
    <string name="weight">Weight</string>
    <string name="durability">Durability</string>
    <string name="create_item">Create Item</string>
    <string name="link">Link</string>
</resources>
