<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:text="@string/name" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelLevel"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/level"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="66dp" />

            <EditText
                android:id="@+id/inputLevel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="1"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelLevel"
                tools:layout_editor_absoluteY="66dp" />


        </LinearLayout>

        <EditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/description" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>