<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="false"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <LinearLayout
            android:id="@+id/valueLayout"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Value"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/value"
                tools:layout_editor_absoluteX="32dp"
                tools:layout_editor_absoluteY="66dp" />

            <ImageView
                android:id="@+id/platinumPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/platinum_coin" />

            <EditText
                android:id="@+id/platinumInput"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:hint="0"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelRange"
                tools:layout_editor_absoluteY="66dp" />

            <ImageView
                android:id="@+id/goldPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/gold_coin" />

            <EditText
                android:id="@+id/goldInput"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0"
                android:inputType="number" />

            <ImageView
                android:id="@+id/silverPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/silver_coin" />

            <EditText
                android:id="@+id/silverInput"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0"
                android:inputType="number" />

            <ImageView
                android:id="@+id/copperPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/bronze_coin" />

            <EditText
                android:id="@+id/copperInput"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0"
                android:inputType="number" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/weightDuraLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weightInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TextView"
                tools:text="@string/weight" />

            <EditText
                android:id="@+id/weightInput"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/durabilityInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/durability" />

            <EditText
                android:id="@+id/durabilityInput"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <EditText
            android:id="@+id/inputDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:text="@string/description" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>